# Git_IoT_Walter

./: README.md  __init__.py  docNuevo.txt  noGit.md  pyproject.toml  requirements_dev.txt  setup.cfg  text.txt  tox.ini
.github/workflows/: main.yml
funciones.egg-info/: PKG-INFO
src/funciones/: listaSE.py
src/funciones.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_listaSE.py
