[metadata]
name = funciones
description = suma
author = Grupo IoT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    funciones
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    unittest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24

[options.package_data]
funciones = py.typed

